<resources>
    <string name="app_name">RoastingwithJava</string>
    <string name="toppings">toppings</string>
    <string name="top1">Whipped Cream</string>
    <string name="top2">Chocolate Sauce</string>
    <string name="quantity">Quantity</string>
    <string name="ntext">-</string>
    <string name="ptext">+</string>
    <string name="order_title">Order Summary</string>
    <string name="Rs">\u20B9</string>
     <string name="order">Order</string>
    <string name="name">Enter your name</string>
</resources>
